--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-button.btn-all{
-    background-color: green;
-    color: #fff;
-    border: 1px solid yellowgreen;
-    border-radius: 1.5rem;
-    padding: 1rem;
+img{
+    width: 300px;
+    height: 400px;
+    object-fit: cover;
+    object-position: top;
 }
-.starwars-1{
+
+#panel{
     text-align: center;
+    margin-top: 2rem;
 }
