--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(image/17503.jpg);
 }
-img {
+.image{
   width: 300px;
   height: 400px;
   object-fit: cover;
@@ -19,4 +19,14 @@ img {
 text-align: start;
 display: inline-table;
 font-weight:600;
+}
+#img-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#image{
+  width: 700px;
+  height: 420px;
+  align-items: center;
 }
